--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>That Bootstrap Portfolio Though</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="../Basic-Portfolio/assets/css/style.css">
+  <title>That Bootstrap Portfolio Though</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+
 </head>
 
 <body>
 
 
 <nav class="navbar navbar-default">
-	<div class="border">
-	<div class="container-fluid">
+  <div id="border">
+  <div class="container-fluid">
 
-		<div class="links">
+    <a href="index.html" id="logo">Julia Shingleton</a>
+
+    <div class="links">
    
-     	 <ul class="nav navbar-nav navbar-right">
-       		 <li><a href="index.html">About</a></li>  
-       		 <li><a href="portfolio.html">Portfolio</a></li>  
-       		 <li><a href="contact.html">Contact</a></li> 
-     	 </ul>
-     	</div>
-		
-		
-			<div class="container-fluid">
-				<div class="row">
-     			<h1>Julia Shingleton</h1>
-     			</div>
-     		</div>
-     	
+       <ul class="nav navbar-nav navbar-right">
+           <li><a href="index.html">About</a></li>  
+           <li><a href="portfolio.html">Portfolio</a></li>  
+           <li><a href="contact.html">Contact</a></li> 
+       </ul>
+      </div>
+            
 
-  	</div><!-- /.container-fluid -->
-  	</div>
-
+    </div><!-- /.container-fluid -->
+    </div>
 </nav>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <div class ="maincontent">
+        <div class="contactspecs">
+         <h1>Contact</h1>
+        </div>
+             <form>
+               <div class="form-group">
+                <label for="exampleFormControlInput1">Name</label>
+                  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+                 </div>
+             <div class="form-group">
+               <label for="exampleFormControlInput1">Email address</label>
+               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+             </div>
+             <div class="form-group">
+               <label for="exampleFormControlTextarea1">Message</label>
+               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+             </div>
+             <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+      </div>
+    </div>
 
-</body>
-</html>
+      <div class="col-md-4">
+
+         <aside>
+
+           <h2>Connect With Me</h2>
+
+          <a href="https://github.com/jashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_github_square_black_107109.png" alt="github" class ="connect"></a>
+              <a href="https://www.linkedin.com/in/juliashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_linkedin_square_color_107091.png" alt="linkedin" class="connect"></a>
+            <a href="https://stackoverflow.com/users/8960591/julia-shingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_overflow_334695.png" alt="stackoverflow" class="connect"></a>
+
+      </aside>
+
+    </div>
+  </div>
+
+
+
+<!--[ footer ] -->
+  <div id="footer">
+    <div class="container">
+      <p class="footer-block">&#169; Copyright 2018 Julia Shingleton</p>
+    </div>
+  </div>
+
+  </body>
+  </html>
