--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
 	<title>That Bootstrap Portfolio Though</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="../Basic-Portfolio/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+
 </head>
 
 <body>
 
 
 <nav class="navbar navbar-default">
-	<div class="border">
+	<div id="border">
 	<div class="container-fluid">
+
+		<a href="index.html" id="logo">Julia Shingleton</a>
 
 		<div class="links">
    
@@ -21,19 +25,52 @@
        		 <li><a href="contact.html">Contact</a></li> 
      	 </ul>
      	</div>
-		
-		
-			<div class="container-fluid">
-				<div class="row">
-     			<h1>Julia Shingleton</h1>
-     			</div>
-     		</div>
-     	
-
+     		   	
   	</div><!-- /.container-fluid -->
   	</div>
-
 </nav>
+
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<div class ="maincontent">
+
+				<h1>About Me</h1>
+					<img src="../Basic-Portfolio/assets/images/julia.jpg" width=143 height=226 alt="Julia" class= "me">
+
+				<p>Hi, I'm Julia! I grew up on a cucumber farm in a small town in NC.  I moved to Wilmington, NC for college, and ended up sticking around town for 12 years.  I finally gave up the beach bum life, and moved to Raleigh in 2013 to work for a software company.  That brings us to now.  I can't wait to begin my new journey with coding!</p>
+				<p> In my free time, you can find me in the gym! I love weight lifting, and have competed in a few body-building shows.  I also enjoy cooking, traveling, reading, eating vanilla almond butter out of the jar, and talking about wanting a puppy.</p>
+
+			</div>
+		</div>
+
+			
+		<div class="col-md-4">
+
+			<aside>
+
+   				 <h2>Connect With Me</h2>
+
+					<a href="https://github.com/jashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_github_square_black_107109.png" alt="github" class ="connect"></a>
+      				<a href="https://www.linkedin.com/in/juliashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_linkedin_square_color_107091.png" alt="linkedin" class="connect"></a>
+     			 	<a href="https://stackoverflow.com/users/8960591/julia-shingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_overflow_334695.png" alt="stackoverflow" class="connect"></a>
+
+			</aside>
+
+		</div>
+
+	</div>
+
+</div>
+</div>
+
+<!--[ footer ] -->
+  <div id="footer">
+    <div class="container">
+      <p class="footer-block">&#169; Copyright 2018 Julia Shingleton</p>
+    </div>
+  </div>
 
 
 </body>
