--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>That Bootstrap Portfolio Though</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="../Basic-Portfolio/assets/css/style.css">
+  <title>That Bootstrap Portfolio Though</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+
 </head>
 
 <body>
 
 
 <nav class="navbar navbar-default">
-	<div class="border">
-	<div class="container-fluid">
+  <div id="border">
+  <div class="container-fluid">
 
-		<div class="links">
+    <a href="index.html" id="logo">Julia Shingleton</a>
+
+    <div class="links">
    
-     	 <ul class="nav navbar-nav navbar-right">
-       		 <li><a href="index.html">About</a></li>  
-       		 <li><a href="portfolio.html">Portfolio</a></li>  
-       		 <li><a href="contact.html">Contact</a></li> 
-     	 </ul>
-     	</div>
-		
-		
-			<div class="container-fluid">
-				<div class="row">
-     			<h1>Julia Shingleton</h1>
-     			</div>
-     		</div>
-     	
+       <ul class="nav navbar-nav navbar-right">
+           <li><a href="index.html">About</a></li>  
+           <li><a href="portfolio.html">Portfolio</a></li>  
+           <li><a href="contact.html">Contact</a></li> 
+       </ul>
+      </div>
+            
 
-  	</div><!-- /.container-fluid -->
-  	</div>
-
+    </div><!-- /.container-fluid -->
+    </div>
 </nav>
 
-
-</body>
-</html>
+  
+<!-- Container (Portfolio Section) -->
+<div id="portfolio" class="container-fluid text-center bg-grey">
+  <h2>Portfolio</h2><br>
+  <h4>What we have created</h4>
+  <div class="row text-center slideanim">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
+        <p>Yes, we built Paris</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="newyork.jpg" alt="New York" width="400" height="300">
+        <p><strong>New York</strong></p>
+        <p>We built New York</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+        <p><strong>San Francisco</strong></p>
+        <p>Yes, San Fran is ours</p>
+      </div>
+    </div>
+  </div><br>
