--- a/portfolio.html
+++ b/portfolio.html
@@ -32,30 +32,54 @@
 </nav>
 
   
-<!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
-  <div class="row text-center slideanim">
-    <div class="col-sm-4">
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>My Portfolio</h1>      
+    <p>A compilation of my best work</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="maincontent">
+  <h1>Gallery</h1>
+  <div class="row">
+    <div class="col-md-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+          <img src="./assets/images/frenchy1.jpg" alt="img 1" style="width:100%">
+          <div class="caption">
+            <p>Sad Pup</p>
+          </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+          <img src="./assets/images/frenchy2.jpg" alt="img 2" style="width:100%">
+          <div class="caption">
+            <p>Hungry Doggo</p>
+          </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+          <img src="./assets/images/frenchy6.jpg" alt="img 3" style="width:100%">
+          <div class="caption">
+            <p>Who's a good boy</p>
+          </div>
       </div>
     </div>
-  </div><br>
+  </div>
+</div>
+
+      <aside>
+
+           <h2>Connect With Me</h2>
+
+          <a href="https://github.com/jashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_github_square_black_107109.png" alt="github" class ="connect"></a>
+              <a href="https://www.linkedin.com/in/juliashingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_linkedin_square_color_107091.png" alt="linkedin" class="connect"></a>
+            <a href="https://stackoverflow.com/users/8960591/julia-shingleton" target="_blank"><img src="../Basic-Portfolio/assets/images/if_overflow_334695.png" alt="stackoverflow" class="connect"></a>
+
+      </aside>
+  </div>
+</div>
+</body>
+</html>
